--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,49 +1,44 @@
-<h1 style="text-align: center;">
-  book List
-</h1>
+<h3 class="title">
+  FMG Bookstore
+</h3>
 
-<div class="card">
-  <p-table [value]="books" [tableStyle]="{'min-width': '60rem'}" sortMode="multiple">
-    <ng-template pTemplate="header">
-      <tr style="border: 1px solid #ddd;">
-        <th pSortableColumn="title" style="width:20%; text-align: center; border: 1px solid #ddd;">
-          Title <p-sortIcon field="title" />
-        </th>
-        <th pSortableColumn="auther" style="width:20%; text-align: center; border: 1px solid #ddd;">
-          Author <p-sortIcon field="auther" />
-        </th>
-        <th pSortableColumn="rate" style="width:20%; text-align: center; border: 1px solid #ddd;">
-          Price <p-sortIcon field="rate" />
-        </th>
-        <th pSortableColumn="isSold" style="width:20%; text-align: center; border: 1px solid #ddd;">
-          Available <p-sortIcon field="isSold" />
-        </th>
-        <th style="width: 4rem; text-align: center; border: 1px solid #ddd;">
-          <p-checkbox [binary]="true" inputId="binary" (click)="selectAll()" />
-        </th>
-      </tr>
-    </ng-template>
+<table mat-table [dataSource]="books" class="tableContainer" *ngIf="books">
+  <ng-container matColumnDef="select">
+    <th mat-header-cell *matHeaderCellDef class="tableHeader">
+      <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selectionOfBook.hasValue() && isAllSelected()"
+        [indeterminate]="selectionOfBook.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+      </mat-checkbox>
+    </th>
+    <td mat-cell *matCellDef="let row">
+      <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selectionOfBook.toggle(row) : null"
+        [checked]="selectionOfBook.isSelected(row)" [aria-label]="checkboxLabel(row)">
+      </mat-checkbox>
+    </td>
+  </ng-container>
 
-    <ng-template pTemplate="body" let-book>
-      <tr style="border: 1px solid #ddd;">
-        <td style="text-align: center; border: 1px solid #ddd;">
-          <a [routerLink]="['/book', book.id]">{{ book.title }}</a>
-        </td>
-        <td style="text-align: center; border: 1px solid #ddd;">{{ book.auther }}</td>
-        <td style="text-align: center; border: 1px solid #ddd;">{{ book.rate | currency: 'USD' }}</td>
-        <td style="text-align: center; border: 1px solid #ddd;">{{ book.isSold ? 'Not Available' : 'Available' }}
-        </td>
-        <td style="text-align: center; border: 1px solid #ddd;">
-          <p-checkbox [(ngModel)]="book.check" [binary]="true" inputId="binary" />
-        </td>
-      </tr>
-    </ng-template>
-  </p-table>
+  <ng-container matColumnDef="title">
+    <th mat-header-cell *matHeaderCellDef class="tableHeader"> Title </th>
+    <td mat-cell *matCellDef="let element" class="tableData">
+      <a [routerLink]="['/book', element.bookId]">{{ element.title }}</a>
+    </td>
+  </ng-container>
 
+  <ng-container matColumnDef="author">
+    <th mat-header-cell *matHeaderCellDef class="tableHeader"> Author </th>
+    <td mat-cell *matCellDef="let element" class="tableData"> {{element.author}} </td>
+  </ng-container>
 
-</div>
+  <ng-container matColumnDef="price">
+    <th mat-header-cell *matHeaderCellDef class="tableHeader"> Price </th>
+    <td mat-cell *matCellDef="let element" class="tableData"> {{element.price}} </td>
+  </ng-container>
 
-<div style="text-align: center;" class="card flex justify-content-center">
-  <button class="" pButton pRipple label="Buy" class="p-button-success" (click)="updateStatus()">
-  </button>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectionOfBook.toggle(row)">
+  </tr>
+</table>
+
+<div *ngIf="selectionOfBook.selected.length >0" style="text-align: center; padding-top: 3rem;"
+  class=" card flex justify-content-center">
+  <button mat-raised-button (click)="updateStatus()" class="purchaseBttn">Purchase</button>
 </div>
