--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -2,42 +2,47 @@
   FMG Bookstore
 </h3>
 
-<table mat-table [dataSource]="books" class="tableContainer" *ngIf="books">
-  <ng-container matColumnDef="select">
-    <th mat-header-cell *matHeaderCellDef class="tableHeader">
-      <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selectionOfBook.hasValue() && isAllSelected()"
-        [indeterminate]="selectionOfBook.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
-      </mat-checkbox>
-    </th>
-    <td mat-cell *matCellDef="let row">
-      <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selectionOfBook.toggle(row) : null"
-        [checked]="selectionOfBook.isSelected(row)" [aria-label]="checkboxLabel(row)">
-      </mat-checkbox>
-    </td>
-  </ng-container>
+<div style="text-align: right; padding-right: 6rem;">
+  <button mat-button (click)="openDialog()"> <mat-icon>search</mat-icon> </button>
+</div>
+<div>
+  <table mat-table [dataSource]="filtredBookList" class="tableContainer" *ngIf="books">
+    <ng-container matColumnDef="select">
+      <th mat-header-cell *matHeaderCellDef class="tableHeader">
+        <mat-checkbox (change)="$event ? masterToggle() : null"
+          [checked]="selectionOfBook.hasValue() && isAllSelected()"
+          [indeterminate]="selectionOfBook.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+        </mat-checkbox>
+      </th>
+      <td mat-cell *matCellDef="let row">
+        <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selectionOfBook.toggle(row) : null"
+          [checked]="selectionOfBook.isSelected(row)" [aria-label]="checkboxLabel(row)">
+        </mat-checkbox>
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="title">
-    <th mat-header-cell *matHeaderCellDef class="tableHeader"> Title </th>
-    <td mat-cell *matCellDef="let element" class="tableData">
-      <a [routerLink]="['/book', element.bookId]">{{ element.title }}</a>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef class="tableHeader"> Title </th>
+      <td mat-cell *matCellDef="let element" class="tableData">
+        <a [routerLink]="['/book', element.bookId]">{{ element.title }}</a>
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="author">
-    <th mat-header-cell *matHeaderCellDef class="tableHeader"> Author </th>
-    <td mat-cell *matCellDef="let element" class="tableData"> {{element.author}} </td>
-  </ng-container>
+    <ng-container matColumnDef="author">
+      <th mat-header-cell *matHeaderCellDef class="tableHeader"> Author </th>
+      <td mat-cell *matCellDef="let element" class="tableData"> {{element.author}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef class="tableHeader"> Price </th>
-    <td mat-cell *matCellDef="let element" class="tableData"> {{element.price}} </td>
-  </ng-container>
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef class="tableHeader"> Price </th>
+      <td mat-cell *matCellDef="let element" class="tableData"> {{element.price}} </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectionOfBook.toggle(row)">
-  </tr>
-</table>
-
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectionOfBook.toggle(row)">
+    </tr>
+  </table>
+</div>
 <div *ngIf="selectionOfBook.selected.length >0" style="text-align: center; padding-top: 3rem;"
   class=" card flex justify-content-center">
   <button mat-raised-button (click)="updateStatus()" class="purchaseBttn">Purchase</button>
