--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -6,7 +6,8 @@
   <button mat-button (click)="openDialog()"> <mat-icon>search</mat-icon> </button>
 </div>
 <div>
-  <table mat-table [dataSource]="filtredBookList" class="tableContainer" *ngIf="books">
+  <table mat-table [dataSource]="filtredBookList" class="tableContainer" matSort
+    (matSortChange)="announceSortChange($event)" class="mat-elevation-z8">
     <ng-container matColumnDef="select">
       <th mat-header-cell *matHeaderCellDef class="tableHeader">
         <mat-checkbox (change)="$event ? masterToggle() : null"
@@ -22,19 +23,19 @@
     </ng-container>
 
     <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef class="tableHeader"> Title </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="tableHeader"> Title </th>
       <td mat-cell *matCellDef="let element" class="tableData">
         <a [routerLink]="['/book', element.bookId]">{{ element.title }}</a>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="author">
-      <th mat-header-cell *matHeaderCellDef class="tableHeader"> Author </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="tableHeader"> Author </th>
       <td mat-cell *matCellDef="let element" class="tableData"> {{element.author}} </td>
     </ng-container>
 
     <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef class="tableHeader"> Price </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="tableHeader"> Price </th>
       <td mat-cell *matCellDef="let element" class="tableData"> {{element.price}} </td>
     </ng-container>
 
