--- a/src/app/book-list-filter/book-list-filter.component.html
+++ b/src/app/book-list-filter/book-list-filter.component.html
@@ -9,10 +9,10 @@
   </mat-form-field>
   <mat-form-field>
     <mat-label>Price</mat-label>
-    <input matInput [(ngModel)]="data.price">
+    <input matInput type="number" [(ngModel)]="data.price" min="0" max="10000" step="0.01" />
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
+  <button mat-button (click)="onNoClick()">Cancel</button>
   <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Ok</button>
 </div>
