--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -3,7 +3,7 @@
 </h3>
 
 <div style="text-align: right; padding-right: 6rem;">
-  <button mat-button (click)="openDialog()"> <mat-icon>search</mat-icon> </button>
+  <button mat-button (click)="openDialog()"> <mat-icon>filter_list</mat-icon>Filter </button>
 </div>
 <div>
   <table mat-table [dataSource]="filtredBookList" class="tableContainer" matSort
@@ -44,7 +44,7 @@
     </tr>
   </table>
 </div>
-<div *ngIf="selectionOfBook.selected.length >0" style="text-align: center; padding-top: 3rem;"
-  class=" card flex justify-content-center">
+<div *ngIf="selectionOfBook.selected.length >0 && filtredBookList.data.length > 0"
+  style="text-align: center; padding-top: 3rem;" class=" card flex justify-content-center">
   <button mat-raised-button (click)="updateStatus()" class="purchaseBttn">Purchase</button>
 </div>
